--- a/views/index.html
+++ b/views/index.html
@@ -44,6 +44,14 @@
               </div>
             </div>
 
+            <!-- Text input-->
+            <div class="form-group">
+              <label class="col-md-4 control-label" for="recommend">Recommend?</label>
+              <div class="col-md-4">
+              <input id="recommendId" name="recommend" type="text" placeholder="Yes or No" class="form-control input-md" required="">
+              </div>
+            </div>
+
             <!-- Textarea -->
             <div class="form-group">
               <label class="col-md-4 control-label" for="reviewContent">Review your Sandwich</label>
