ajax set up to submit a review.

--- a/views/index.html
+++ b/views/index.html
@@ -56,7 +56,7 @@
             <div class="form-group">
               <label class="col-md-4 control-label" for="reviewContent">Review your Sandwich</label>
               <div class="col-md-4">
-                <textarea class="form-control" id="reviewContent" name="review" placeholder="I thought this sandwich was incredible"></textarea>
+                <textarea class="form-control" id="reviewContent" name="reviewContent" placeholder="I thought this sandwich was incredible"></textarea>
               </div>
             </div>
 
