can now append gifs from gif search to the bottom of the search field and above the review content

--- a/views/indexGiphy.html
+++ b/views/indexGiphy.html
@@ -40,6 +40,11 @@
             </div>
             <button id="singlebutton" name="gifSubmit" class="btn btn-primary">Submit Gif</button>
           </div>
+          <div class="row">
+            <div class="col-xs-12 searched-gifs">
+              <!-- gifs go here -->
+            </div>
+          </div>
         </form>
 
         <form class="form-horizontal">
