--- a/views/index.html
+++ b/views/index.html
@@ -30,7 +30,7 @@
       <div class="row">
       <div class="col-md-10 col-md-offset-1">
 
-        <form class="form-horizontal">
+        <form class="form-horizontal new-review">
           <fieldset>
 
             <!-- Form Name -->
