--- a/views/indexGiphy.html
+++ b/views/indexGiphy.html
@@ -38,7 +38,7 @@
                 <input id="gifId" name="q" type="text" placeholder="This gif defines the sandwich" class="form-control input-md" required="">
               </article>
             </div>
-            <button id="singlebutton" name="gifSubmit" class="btn btn-primary">Submit Gif</button>
+            <button id="singlebutton" name="gifSubmit" class="btn btn-primary center-block">Submit Gif</button>
           </div>
           <div class="row">
             <div class="col-xs-12 searched-gifs">
@@ -52,6 +52,29 @@
 
             <!-- Form Name -->
             <legend>Add New Review</legend>
+            <!-- Button trigger modal -->
+              <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#gifModal">
+              Find a gif
+              </button>
+
+              <!-- Modal -->
+              <div class="modal fade" id="gifModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                      <h4 class="modal-title" id="myModalLabel">Find a gif to represent your experience!</h4>
+                    </div>
+                    <div class="modal-body">
+                      ...
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                      <button type="button" class="btn btn-primary">Save changes</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
 
 
             <!-- Text input-->
