--- a/views/indexGiphy.html
+++ b/views/indexGiphy.html
@@ -28,7 +28,7 @@
     <!-- Begin Form Sample -->
     <section id='review-form' class="container">
       <div class="row">
-      <div class="col-md-10 col-md-offset-1">
+      <div class="col-md-10 col-md-offset-1"> -->
 
         <form class="form-horizontal form-gif" action="index.html" method="get">
           <div class="form-group">
@@ -66,40 +66,58 @@
                       <h4 class="modal-title" id="myModalLabel">Find a gif to represent your experience!</h4>
                     </div>
                     <div class="modal-body">
-                      ...
+                      <div class="fluid-container">
+                      <!-- search field -->
+                        <div class="row">
+                          <section class="col-xs-12">
+                            <form class="form-inline">
+                              <!-- <label>Search Gifs</label> -->
+                              <input type="text" class="form-control gif-input" name="q" placeholder="search gifs">
+                              <input type="hidden" name="api_key" value="dc6zaTOxFJmzC">
+                              <!-- replace submit with an onclick action -->
+                              <input type="submit" value="Go!" class="btn btn-primary" id="gifSearchButton">
+                            </form>
+                          </section>
+                        </div>
+                        <!-- this is where gif images will go -->
+                        <section class="row gifSelectionField">
+                          <script id="selectableGif-template" type="text/x-handlebars-template">
+                            <article class="col-xs-6 col-md-4 gifBox">
+
+                            </article>
+                          </script>
+                        </section>
+                      </div>
                     </div>
-                    <div class="modal-footer">
-                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                      <button type="button" class="btn btn-primary">Save changes</button>
-                    </div>
+                    <!-- modal footer removed -->
                   </div>
                 </div>
               </div>
 
 
             <!-- Text input-->
-            <div class="form-group">
+            <!-- <div class="form-group">
               <label class="col-md-4 control-label" for="stars">Stars</label>
               <div class="col-md-4">
               <input id="starsId" name="stars" type="text" placeholder="Enter 1-5" class="form-control input-md" required="">
               </div>
-            </div>
+            </div> -->
 
             <!-- Text input-->
-            <div class="form-group">
+            <!-- <div class="form-group">
               <label class="col-md-4 control-label" for="recommend">Recommend?</label>
               <div class="col-md-4">
               <input id="recommendId" name="recommend" type="text" placeholder="Yes or No" class="form-control input-md" required="">
               </div>
-            </div>
+            </div> -->
 
             <!-- Textarea -->
-            <div class="form-group">
+            <!-- <div class="form-group">
               <label class="col-md-4 control-label" for="reviewContent">Review your Sandwich</label>
               <div class="col-md-4">
                 <textarea class="form-control" id="reviewContent" name="reviewContent" placeholder="I thought this sandwich was incredible"></textarea>
               </div>
-            </div>
+            </div> -->
 
             <!-- Button -->
             <div class="form-group">
@@ -120,7 +138,7 @@
 
     <section class="container">
       <div class="row">
-        <div class="col-md-10 col-md-offset-1">
+        <div class="col-md-10 col-md-offset-1 deleteThisClass">
           <h2>Reviews</h2>
         </div>
       </div>
