--- a/views/index.html
+++ b/views/index.html
@@ -40,15 +40,24 @@
             <div class="form-group">
               <label class="col-md-4 control-label" for="stars">Stars</label>
               <div class="col-md-4">
-              <input id="starsId" name="stars" type="text" placeholder="Enter 1-5" class="form-control input-md" required="">
-              </div>
-            </div>
-
-            <!-- Text input-->
-            <div class="form-group">
-              <label class="col-md-4 control-label" for="recommend">Recommend?</label>
-              <div class="col-md-4">
-              <input id="recommendId" name="recommend" type="text" placeholder="Yes or No" class="form-control input-md" required="">
+                <span class="rating">
+                    <input type="radio" class="rating-input"
+                        id="rating-input-1-5" name="rating-input-1">
+                    <label for="rating-input-1-5" class="rating-star"></label>
+                    <input type="radio" class="rating-input"
+                        id="rating-input-1-4" name="rating-input-1">
+                    <label for="rating-input-1-4" class="rating-star"></label>
+                    <input type="radio" class="rating-input"
+                        id="rating-input-1-3" name="rating-input-1">
+                    <label for="rating-input-1-3" class="rating-star"></label>
+                    <input type="radio" class="rating-input"
+                        id="rating-input-1-2" name="rating-input-1">
+                    <label for="rating-input-1-2" class="rating-star"></label>
+                    <input type="radio" class="rating-input"
+                        id="rating-input-1-1" name="rating-input-1">
+                    <label for="rating-input-1-1" class="rating-star"></label>
+                </span>
+              <!-- <input id="starsId" name="stars" type="text" placeholder="Enter 1-5" class="form-control input-md" required=""> -->
               </div>
             </div>
 
@@ -57,6 +66,15 @@
               <label class="col-md-4 control-label" for="reviewContent">Review your Sandwich</label>
               <div class="col-md-4">
                 <textarea class="form-control" id="reviewContent" name="reviewContent" placeholder="I thought this sandwich was incredible"></textarea>
+              </div>
+            </div>
+
+            <!-- Text input-->
+            <div class="form-group">
+              <label class="col-md-4 control-label" for="recommend">Recommend?</label>
+              <div class="col-md-4">
+                <input type="radio" name="recommend" value="true"> True<br>
+                <input type="radio" name="recommend" value="false"> False<br>
               </div>
             </div>
 
@@ -83,6 +101,8 @@
           <h2>Reviews</h2>
         </div>
       </div>
+    </section>
 
+  
   </body>
 </html>
