--- a/views/indexGiphy.html
+++ b/views/indexGiphy.html
@@ -30,7 +30,7 @@
       <div class="row">
       <div class="col-md-10 col-md-offset-1"> -->
 
-        <form class="form-horizontal form-gif" action="index.html" method="get">
+        <form class="form-horizontal form-gif" action="indexGiphy.html" method="get">
           <div class="form-group">
             <div class="col-xs-12" id="giphy">
               <article class="col-xs-12">
@@ -70,12 +70,12 @@
                       <!-- search field -->
                         <div class="row">
                           <section class="col-xs-12">
-                            <form class="form-inline">
+                            <form class="form-inline" id="gifSearchButton">
                               <!-- <label>Search Gifs</label> -->
                               <input type="text" class="form-control gif-input" name="q" placeholder="search gifs">
                               <input type="hidden" name="api_key" value="dc6zaTOxFJmzC">
                               <!-- replace submit with an onclick action -->
-                              <input type="submit" value="Go!" class="btn btn-primary" id="gifSearchButton">
+                              <input type="submit" value="Go!" class="btn btn-primary">
                             </form>
                           </section>
                         </div>
@@ -140,6 +140,11 @@
       <div class="row">
         <div class="col-md-10 col-md-offset-1 deleteThisClass">
           <h2>Reviews</h2>
+          <script id="selectableGif-template2" type="text/x-handlebars-template">
+            <article class="col-xs-6 col-md-4 gifBox">
+
+            </article>
+          </script>
         </div>
       </div>
 
