have gifs loading into individual divs

--- a/views/indexGiphy.html
+++ b/views/indexGiphy.html
@@ -83,7 +83,7 @@
                         <section class="row gifSelectionField">
                           <script id="selectableGif-template" type="text/x-handlebars-template">
                             <article class="col-xs-6 col-md-4 gifBox">
-
+                              <img src="{{insertGifHere}}"></a>
                             </article>
                           </script>
                         </section>
@@ -136,13 +136,13 @@
 
     <!-- End Form Sample -->
 
-    <section class="container">
+    <section class="container gifSelectionField2">
       <div class="row">
         <div class="col-md-10 col-md-offset-1 deleteThisClass">
           <h2>Reviews</h2>
           <script id="selectableGif-template2" type="text/x-handlebars-template">
             <article class="col-xs-6 col-md-4 gifBox">
-
+              <img src="{{insertGifHere}}"></a>
             </article>
           </script>
         </div>
