--- a/views/index.html
+++ b/views/index.html
@@ -57,7 +57,6 @@
                         id="rating-input-1-1" name="rating-input-1">
                     <label for="rating-input-1-1" class="rating-star"></label>
                 </span>
-              <!-- <input id="starsId" name="stars" type="text" placeholder="Enter 1-5" class="form-control input-md" required=""> -->
               </div>
             </div>
 
@@ -118,6 +117,23 @@
               <div class="form-group">
                 <label class="col-md-4 control-label" for="songName">Song Name</label>
                 <div class="col-md-4">
+                  <!-- <span class="rating">
+                      <input type="radio" class="rating-input"
+                          id="rating-input-1-5" name="rating-input-1">
+                      <label for="rating-input-1-5" class="rating-star"></label>
+                      <input type="radio" class="rating-input"
+                          id="rating-input-1-4" name="rating-input-1">
+                      <label for="rating-input-1-4" class="rating-star"></label>
+                      <input type="radio" class="rating-input"
+                          id="rating-input-1-3" name="rating-input-1">
+                      <label for="rating-input-1-3" class="rating-star"></label>
+                      <input type="radio" class="rating-input"
+                          id="rating-input-1-2" name="rating-input-1">
+                      <label for="rating-input-1-2" class="rating-star"></label>
+                      <input type="radio" class="rating-input"
+                          id="rating-input-1-1" name="rating-input-1">
+                      <label for="rating-input-1-1" class="rating-star"></label>
+                  </span> -->
                   <input id="songName" name="songName" type="text" placeholder="" class="form-control input-md" required="">
                 </div>
               </div>
