--- a/views/index.html
+++ b/views/index.html
@@ -28,7 +28,6 @@
     <!-- Begin Form Sample -->
     <section id='review-form' class="container">
 
-      <script id='review-template' type='text/x-handlebars-template'>
       <div class="row">
       <div class="col-md-10 col-md-offset-1">
 
@@ -44,19 +43,19 @@
               <div class="col-md-4">
                 <span class="rating">
                     <input type="radio" class="rating-input"
-                        id="rating-input-1-5" name="rating-input-1">
+                        id="rating-input-1-5" name="stars" value="5">
                     <label for="rating-input-1-5" class="rating-star"></label>
                     <input type="radio" class="rating-input"
-                        id="rating-input-1-4" name="rating-input-1">
+                        id="rating-input-1-4" name="stars" value="4">
                     <label for="rating-input-1-4" class="rating-star"></label>
                     <input type="radio" class="rating-input"
-                        id="rating-input-1-3" name="rating-input-1">
+                        id="rating-input-1-3" name="stars" value="3">
                     <label for="rating-input-1-3" class="rating-star"></label>
                     <input type="radio" class="rating-input"
-                        id="rating-input-1-2" name="rating-input-1">
+                        id="rating-input-1-2" name="stars" value="2">
                     <label for="rating-input-1-2" class="rating-star"></label>
                     <input type="radio" class="rating-input"
-                        id="rating-input-1-1" name="rating-input-1">
+                        id="rating-input-1-1" name="stars" value="1">
                     <label for="rating-input-1-1" class="rating-star"></label>
                 </span>
               </div>
@@ -66,7 +65,7 @@
             <div class="form-group">
               <label class="col-md-4 control-label" for="reviewContent">Review your Sandwich</label>
               <div class="col-md-4">
-                <textarea class="form-control" id="reviewContent" name="reviewContent" placeholder="I thought this sandwich was incredible">{{ review.reviewContent }}</textarea>
+                <textarea class="form-control" id="reviewContent" name="reviewContent" placeholder="I thought this sandwich was incredible"></textarea>
               </div>
             </div>
 
@@ -91,7 +90,6 @@
       </div>
       </div>
     </section>
-  </script>
 
 
 
@@ -101,6 +99,10 @@
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
           <h2>Reviews</h2>
+            <div class = appendReviews></div>
+          <script id='review-template' type='text/x-handlebars-template'>
+            <p>{{reviewContent}}</p>
+          </script>
         </div>
       </div>
     </section>
