--- a/views/index.html
+++ b/views/index.html
@@ -99,7 +99,7 @@
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
           <h2>Reviews</h2>
-            <div class = appendReviews></div>
+            <div class = 'appendReviews'></div>
           <script id='review-template' type='text/x-handlebars-template'>
             <p>{{reviewContent}}</p>
           </script>
