--- a/views/index.html
+++ b/views/index.html
@@ -37,6 +37,60 @@
             <!-- Form Name -->
             <legend>Add New Review</legend>
 
+<!-- ***** gif selection ***** -->
+            <section id='review-form' class="container">
+              <div class="row">
+                <div class="col-md-10 col-md-offset-1"> -->
+
+                  <form class="form-horizontal form-gif" action="indexGiphy.html" method="get">
+                    <div class="form-group">
+                      <div class="col-xs-12" id="giphy">
+                        <article class="col-xs-12">
+                          <input type="hidden" name="api_key" value="dc6zaTOxFJmzC">
+                          <input id="gifId" name="q" type="text" placeholder="This gif defines the sandwich" class="form-control input-md" required="">
+                        </article>
+                      </div>
+                      <button id="singlebutton" name="gifSubmit" class="btn btn-primary center-block">Submit Gif</button>
+                    </div>
+                    <div class="row">
+                      <div class="col-xs-12 searched-gifs">
+                        <!-- gifs go here -->
+                      </div>
+                    </div>
+                  </form>
+
+          <!-- not sure what this form does right now -->
+                  <!-- <form class="form-horizontal">
+                    <fieldset>
+                      Button
+                      <div class="form-group">
+                        <label class="col-md-4 control-label" for="singlebutton">Save Review</label>
+                        <div class="col-md-4">
+                          <button id="singlebutton" name="singlebutton" class="btn btn-primary">Submit</button>
+                        </div>
+                      </div>
+                    </fieldset>
+                  </form> -->
+
+                </div>
+              </div>
+            </section>
+
+            <!-- gif handlebars section -->
+            <section class="container gifSelectionField2">
+              <div class="row">
+                <div class="col-md-10 col-md-offset-1 deleteThisClass">
+                  <h2>Reviews</h2>
+                    <script id="selectableGif-template2" type="text/x-handlebars-template">
+                      <article class="col-xs-6 col-md-3" id="tester {{url}}">
+                        <img class="gifBox" src="{{insertGifHere}}"></a>
+                      </article>
+                    </script>
+                </div>
+              </div>
+            </section>
+<!-- ****** end of gif section ******  -->
+
             <!-- Text input-->
             <div class="form-group">
               <label class="col-md-4 control-label" for="stars">Stars</label>
