--- a/views/indexGiphy.html
+++ b/views/indexGiphy.html
@@ -28,70 +28,41 @@
     <!-- Begin Form Sample -->
     <section id='review-form' class="container">
       <div class="row">
-      <div class="col-md-10 col-md-offset-1"> -->
+        <div class="col-md-10 col-md-offset-1"> -->
 
-        <form class="form-horizontal form-gif" action="indexGiphy.html" method="get">
-          <div class="form-group">
-            <div class="col-xs-12" id="giphy">
-              <article class="col-xs-12">
-                <input type="hidden" name="api_key" value="dc6zaTOxFJmzC">
-                <input id="gifId" name="q" type="text" placeholder="This gif defines the sandwich" class="form-control input-md" required="">
-              </article>
-            </div>
-            <button id="singlebutton" name="gifSubmit" class="btn btn-primary center-block">Submit Gif</button>
-          </div>
-          <div class="row">
-            <div class="col-xs-12 searched-gifs">
-              <!-- gifs go here -->
-            </div>
-          </div>
-        </form>
-
-        <form class="form-horizontal">
-          <fieldset>
-
-            <!-- Form Name -->
-            <legend>Add New Review</legend>
-
-
-            <!-- Text input-->
-            <!-- <div class="form-group">
-              <label class="col-md-4 control-label" for="stars">Stars</label>
-              <div class="col-md-4">
-              <input id="starsId" name="stars" type="text" placeholder="Enter 1-5" class="form-control input-md" required="">
-              </div>
-            </div> -->
-
-            <!-- Text input-->
-            <!-- <div class="form-group">
-              <label class="col-md-4 control-label" for="recommend">Recommend?</label>
-              <div class="col-md-4">
-              <input id="recommendId" name="recommend" type="text" placeholder="Yes or No" class="form-control input-md" required="">
-              </div>
-            </div> -->
-
-            <!-- Textarea -->
-            <!-- <div class="form-group">
-              <label class="col-md-4 control-label" for="reviewContent">Review your Sandwich</label>
-              <div class="col-md-4">
-                <textarea class="form-control" id="reviewContent" name="reviewContent" placeholder="I thought this sandwich was incredible"></textarea>
-              </div>
-            </div> -->
-
-            <!-- Button -->
+          <form class="form-horizontal form-gif" action="indexGiphy.html" method="get">
             <div class="form-group">
-              <label class="col-md-4 control-label" for="singlebutton">Save Review</label>
-              <div class="col-md-4">
-                <button id="singlebutton" name="singlebutton" class="btn btn-primary">Submit</button>
+              <div class="col-xs-12" id="giphy">
+                <article class="col-xs-12">
+                  <input type="hidden" name="api_key" value="dc6zaTOxFJmzC">
+                  <input id="gifId" name="q" type="text" placeholder="This gif defines the sandwich" class="form-control input-md" required="">
+                </article>
+              </div>
+              <button id="singlebutton" name="gifSubmit" class="btn btn-primary center-block">Submit Gif</button>
+            </div>
+            <div class="row">
+              <div class="col-xs-12 searched-gifs">
+                <!-- gifs go here -->
               </div>
             </div>
-          </fieldset>
-        </form>
-      </div>
+          </form>
+
+  <!-- not sure what this form does right now -->
+          <!-- <form class="form-horizontal">
+            <fieldset>
+              Button
+              <div class="form-group">
+                <label class="col-md-4 control-label" for="singlebutton">Save Review</label>
+                <div class="col-md-4">
+                  <button id="singlebutton" name="singlebutton" class="btn btn-primary">Submit</button>
+                </div>
+              </div>
+            </fieldset>
+          </form> -->
+          
+        </div>
       </div>
     </section>
-
-
 
     <!-- End Form Sample -->
 
@@ -107,24 +78,6 @@
         </div>
       </div>
     </section>
-    <!-- <section class="container gifSelectionField3">
-      <div class="row">
-        <div class="col-md-3 gif-area">
-          <script id="selectableGif-template101" type="text/x-handlebars-template">
 
-          </script>
-        </div>
-        <div class="col-md-3 gif-area">
-          <script id="selectableGif-template102" type="text/x-handlebars-template">
-
-          </script>
-        </div>
-        <div class="col-md-3 gif-area">
-          <script id="selectableGif-template103" type="text/x-handlebars-template">
-
-          </script>
-        </div>
-      </div>
-    </section> -->
   </body>
 </html>
