--- a/views/index.html
+++ b/views/index.html
@@ -14,6 +14,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.min.js"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAdC5jhQIR2gpGxwKXXCaKPsyrJM7B2MV4"></script>
 
     <!-- APPLICATION SCRIPTS -->
     <script src="scripts/app.js"></script>
@@ -97,12 +98,13 @@
 
     <section class="container">
       <div class="row">
-        <div class="col-md-10 col-md-offset-1">
-          <h2>Reviews</h2>
+        <div class="col-md-6 col-md-offset-3">
+          <h2>Map</h2>
+          <div id="mapPlacement"></div>
         </div>
       </div>
     </section>
 
-  
+
   </body>
 </html>
