selected gif transfers to user review area

--- a/views/index.html
+++ b/views/index.html
@@ -72,12 +72,16 @@
             <!-- Form Name -->
             <legend>Add New Review</legend>
 
-
-            <section>
-              <script id="gif-choice" type="text/x-handlebars-template">
-                <article class="center col-xs-4">
-                  <img class="selected-gif" src="{{userChosenGif}}"></a>
-              </script>
+            <!-- gif added to crete review -->
+            <section class="container selected-gif">
+              <div class="row">
+                <div class="col-xs-12">
+                  <script id="gif-choice" type="text/x-handlebars-template">
+                    <article class="center col-xs-4">
+                      <img class="selected-gif" src="{{userChosenGif}}"></a>
+                  </script>
+                </div>
+              </div>
             </section>
             <!-- Text input-->
             <div class="form-group">
