gif string added to review model

--- a/views/index.html
+++ b/views/index.html
@@ -145,8 +145,11 @@
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
           <h2>Reviews</h2>
+          
+          <!-- sandwich reviews -->
             <div class = 'appendReviews'></div>
           <script id='review-template' type='text/x-handlebars-template'>
+
             <p>{{reviewContent}}</p>
           </script>
         </div>
