--- a/views/index.html
+++ b/views/index.html
@@ -145,12 +145,19 @@
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
           <h2>Reviews</h2>
-          
+
           <!-- sandwich reviews -->
             <div class = 'appendReviews'></div>
           <script id='review-template' type='text/x-handlebars-template'>
-
-            <p>{{reviewContent}}</p>
+            <div class="container">
+              <div class="row">
+                <article class="col-xs-12 reviewIndividual">
+                  <p>Sandwich stars: {{reviewStars}}</p>
+                  <p>Recommended:: {{reviewRecommend}}</p>
+                  <p>Review: {{reviewContent}}</p>
+                </article>
+              </div>
+            </div>
           </script>
         </div>
       </div>
