--- a/views/index.html
+++ b/views/index.html
@@ -79,6 +79,7 @@
                   <script id="gif-choice" type="text/x-handlebars-template">
                     <article class="center col-xs-4">
                       <img class="selected-gif" src="{{userChosenGif}}"></a>
+                      <input type="hidden" name="gif" value="{{userChosenGif}}">
                   </script>
                 </div>
               </div>
@@ -151,10 +152,15 @@
           <script id='review-template' type='text/x-handlebars-template'>
             <div class="container">
               <div class="row">
-                <article class="col-xs-12 reviewIndividual">
-                  <p>Sandwich stars: {{reviewStars}}</p>
+                <article class="col-xs-8 reviewIndividual">
+                  <div class="row">
+                    <div class="col-xs-12">
+                      <img class="review-gif center" src="{{reviewGif}}"></a>
+                    </div>
+                  </div>
+                  <p>Sandwich Stars: {{reviewStars}}</p>
                   <p>Recommended:: {{reviewRecommend}}</p>
-                  <p>Review: {{reviewContent}}</p>
+                  <p>{{reviewContent}}</p>
                 </article>
               </div>
             </div>
