non functioning buttons saying edit and delete have been placed in each review

--- a/views/index.html
+++ b/views/index.html
@@ -161,6 +161,8 @@
                   <p>Sandwich Stars: {{reviewStars}}</p>
                   <p>Recommended:: {{reviewRecommend}}</p>
                   <p>{{reviewContent}}</p>
+                  <button type="button" class="btn btn-warning btn-sm" id="edit-button">Edit</button>
+                  <button type="button" class="btn btn-warning btn-sm" id="delete-button">Delete</button>
                 </article>
               </div>
             </div>
