--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,6 +1,6 @@
-* {
+/** {
   border: dashed 1px black;
-}
+}*/
 
 .gifBox {
   min-height: 150px;
@@ -47,7 +47,7 @@
 
   .jumbotron {
     background-color: #0B543E;
-    color: #F4B260;
+    color: #E5563C;
   }
 
   .site-logo {
@@ -56,15 +56,23 @@
     margin-left: 40%;
   }
 
-  h1 {
+  h1, h2, legend {
     text-align: center;
-    text-shadow: 7px 5px 5px #E5563C;
+    /*text-shadow: 7px 5px 5px #E5563C;*/
+    /*font-family: 'Indie Flower', cursive;*/
+    font-family: 'Gloria Hallelujah', cursive;
   }
 
   .reviewIndividual {
     border: solid 1px black;
+    background-color: #BBDB93;
   }
 
   .review-gif {
     min-height: 200px;
+  }
+
+  body {
+    /*font-family: Calibria, serif;*/
+    background-color: #0B543E;
   }
