--- a/views/index.html
+++ b/views/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+
+    <!-- google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&effect=3d" rel="stylesheet">
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Where's my Hero</title>
@@ -22,7 +26,7 @@
   <body>
     <div class="jumbotron">
       <div class="container site-title">
-        <h1>Where's My Hero!?</h1>
+        <h1 class="font-effect-3d">Where's My Hero!?</h1>
       </div>
       <div class="site-logo center">
         <img src="http://i.giphy.com/DpB9NBt1ySFDHH9yiCA.gif" alt="our hero!" height="250" style="max-width: 320px">
@@ -152,14 +156,14 @@
           <script id='review-template' type='text/x-handlebars-template'>
             <div class="container">
               <div class="row">
-                <article class="col-xs-8 reviewIndividual">
+                <article class="col-xs-8 reviewIndividual" id="{{reviewId}}">
                   <div class="row">
                     <div class="col-xs-12">
                       <img class="review-gif center" src="{{reviewGif}}"></a>
                     </div>
                   </div>
                   <p>Sandwich Stars: {{reviewStars}}</p>
-                  <p>Recommended:: {{reviewRecommend}}</p>
+                  <p>Recommended: {{reviewRecommend}}</p>
                   <p>{{reviewContent}}</p>
                   <button type="button" class="btn btn-warning btn-sm" id="edit-button">Edit</button>
                   <button type="button" class="btn btn-warning btn-sm" id="delete-button">Delete</button>
