added review ID as a class to the edit and review button in each review.

--- a/views/index.html
+++ b/views/index.html
@@ -153,9 +153,9 @@
           <h2>Map</h2>
           <div id="mapPlacement"></div>
         </div>
-      </div>  
+      </div>
      </section>
-    
+
     <section class="container">
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
@@ -175,8 +175,8 @@
                   <p>Sandwich Stars: {{reviewStars}}</p>
                   <p>Recommended: {{reviewRecommend}}</p>
                   <p>{{reviewContent}}</p>
-                  <button type="button" class="btn btn-warning btn-sm" id="edit-button">Edit</button>
-                  <button type="button" class="btn btn-warning btn-sm" id="delete-button">Delete</button>
+                  <button type="button" class="btn btn-warning btn-sm {{reviewId}}" id="edit-button">Edit</button>
+                  <button type="button" class="btn btn-warning btn-sm {{reviewId}}" id="delete-button">Delete</button>
                 </article>
               </div>
             </div>
