delete button works.

--- a/views/index.html
+++ b/views/index.html
@@ -175,8 +175,8 @@
                   <p>Sandwich Stars: {{reviewStars}}</p>
                   <p>Recommended: {{reviewRecommend}}</p>
                   <p>{{reviewContent}}</p>
-                  <button type="button" class="btn btn-warning btn-sm {{reviewId}}" id="edit-button">Edit</button>
-                  <button type="button" class="btn btn-warning btn-sm {{reviewId}}" id="delete-button">Delete</button>
+                  <button type="button" class="{{reviewId}} btn btn-warning btn-sm" id="edit-button">Edit</button>
+                  <button type="button" class="{{reviewId}} btn btn-warning btn-sm" id="delete-button">Delete</button>
                 </article>
               </div>
             </div>
