--- a/views/index.html
+++ b/views/index.html
@@ -162,25 +162,26 @@
           <h2>Reviews</h2>
 
           <!-- sandwich reviews -->
-            <div class = 'appendReviews'></div>
-          <script id='review-template' type='text/x-handlebars-template'>
-            <div class="container">
-              <div class="row">
-                <article class="col-xs-8 reviewIndividual" id="{{reviewId}}">
-                  <div class="row">
-                    <div class="col-xs-12">
-                      <img class="review-gif center" src="{{reviewGif}}"></a>
+          <div class="appendReviews">
+            <script id='review-template' type='text/x-handlebars-template'>
+              <div class="container">
+                <div class="row">
+                  <article class="col-xs-8 reviewIndividual" id="{{reviewId}}">
+                    <div class="row">
+                      <div class="col-xs-12">
+                        <img class="review-gif center" src="{{reviewGif}}"></a>
+                      </div>
                     </div>
-                  </div>
-                  <p>Sandwich Stars: {{reviewStars}}</p>
-                  <p>Recommended: {{reviewRecommend}}</p>
-                  <p>{{reviewContent}}</p>
-                  <button type="button" class="{{reviewId}} btn btn-warning btn-sm" id="edit-button">Edit</button>
-                  <button type="button" class="{{reviewId}} btn btn-warning btn-sm" id="delete-button">Delete</button>
-                </article>
+                    <p>Sandwich Stars: {{reviewStars}}</p>
+                    <p>Recommended: {{reviewRecommend}}</p>
+                    <p>{{reviewContent}}</p>
+                    <button type="button" class="{{reviewId}} btn btn-warning btn-sm" id="edit-button">Edit</button>
+                    <button type="button" class="{{reviewId}} btn btn-warning btn-sm" id="delete-button">Delete</button>
+                  </article>
+                </div>
               </div>
-            </div>
-          </script>
+            </script>
+          </div>
         </div>
       </div>
     </section>
