user sign up working

--- a/views/index.html
+++ b/views/index.html
@@ -33,6 +33,27 @@
         <img src="http://i.giphy.com/DpB9NBt1ySFDHH9yiCA.gif" alt="our hero!" height="250" style="max-width: 320px">
       </div>
     </div>
+
+    <!-- Sample login form -->
+
+    <h2>Sign Up</h2>
+    <br>
+    <form method="POST" action="/signup">
+      <div class="row">
+        <div class="col-xs-8 col-xs-offset-2">
+          <div class="form-group">
+            <input type="text" name="username" class="form-control" placeholder="Username" autofocus>
+          </div>
+          <div class="form-group">
+            <input type="password" name="password" class="form-control" placeholder="Password">
+          </div>
+          <div class="form-group">
+            <input type="submit" class="btn btn-block btn-primary" value="Sign Up">
+          </div>
+        </div>
+      </div>
+    </form>
+
     <!-- Begin Form Sample -->
     <section id='review-form' class="container">
 
@@ -153,9 +174,9 @@
           <h2>Map</h2>
           <div id="mapPlacement"></div>
         </div>
-      </div>  
+      </div>
      </section>
-    
+
     <section class="container">
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
