--- a/views/index.html
+++ b/views/index.html
@@ -54,6 +54,26 @@
       </div>
     </form>
 
+    <!-- Sample Sign in Form -->
+
+    <h2>Log In</h2>
+      <br>
+      <form method="POST" action="/login">
+        <div class="row">
+          <div class="col-xs-8 col-xs-offset-2">
+            <div class="form-group">
+              <input type="text" name="username" class="form-control" placeholder="Username" autofocus>
+            </div>
+            <div class="form-group">
+              <input type="password" name="password" class="form-control" placeholder="Password">
+            </div>
+            <div class="form-group">
+              <input type="submit" class="btn btn-block btn-primary" value="Log In">
+            </div>
+          </div>
+        </div>  
+      </form>
+
     <!-- Begin Form Sample -->
     <section id='review-form' class="container">
 
