cleaned up code slightly and added a bunch of comments

--- a/views/index.html
+++ b/views/index.html
@@ -58,7 +58,7 @@
           </div>
         </section>
 
-<!-- gif handlebars section -->
+<!-- gif selection area with rows of gifs -->
           <section class="container gifSelectionField2">
             <div class="row">
               <div class="col-md-10 col-md-offset-1">
@@ -166,6 +166,7 @@
             <script id='review-template' type='text/x-handlebars-template'>
               <div class="container">
                 <div class="row">
+                  <!-- edit review area to be filled in here -->
                   <article class="col-xs-8 reviewIndividual" id="{{reviewId}}">
                     <div class="row">
                       <div class="col-xs-12">
