edit button functionality not complete.  this branch is ready to merge with master for other data.

--- a/views/index.html
+++ b/views/index.html
@@ -166,7 +166,6 @@
             <script id='review-template' type='text/x-handlebars-template'>
               <div class="container">
                 <div class="row">
-                  <!-- edit review area to be filled in here -->
                   <article class="col-xs-8 reviewIndividual" id="{{reviewId}}">
                     <div class="row">
                       <div class="col-xs-12">
@@ -178,6 +177,19 @@
                     <p>{{reviewContent}}</p>
                     <button type="button" class="{{reviewId}} btn btn-warning btn-sm" id="edit-button">Edit</button>
                     <button type="button" class="{{reviewId}} btn btn-warning btn-sm" id="delete-button">Delete</button>
+<!-- code test for basic edit of review.  delete this -->
+                    <section class="DELETE-THIS-">
+                      <h5>TEMP EDIT AREA</h2>
+                      <form>
+                        <div class="form-group2">
+                          <label class="col-md-4 control-label2" for="reviewContent2">ReReview your Sandwich</label>
+                          <div class="col-md-4">
+                            <textarea class="form-control2" id="reviewContent2" name="reviewContent2"></textarea>
+                          </div>
+                        </div>
+                      </form>
+                    </section>
+<!-- end of code test -->
                   </article>
                 </div>
               </div>
