--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -72,6 +72,10 @@
     min-height: 200px;
   }
 
+  #singlebuttonSubmit {
+    margin-left: 75px;
+  }
+
   body {
     /*font-family: Calibria, serif;*/
     background-color: #0B543E;
