--- a/views/index.html
+++ b/views/index.html
@@ -71,7 +71,7 @@
               <input type="submit" class="btn btn-block btn-primary" value="Log In">
             </div>
           </div>
-        </div>  
+        </div>
       </form>
 
     <!-- Begin Form Sample -->
@@ -83,7 +83,7 @@
         <!-- ***** gif selection ***** -->
         <section id='review-form' class="container">
           <div class="row">
-            <div class="col-md-10 col-md-offset-1">
+            <div class="col-md-10">
               <form class="form-horizontal form-gif" action="indexGiphy.html" method="get">
                 <div class="form-group">
                   <div class="col-xs-12" id="giphy">
