created edit page

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -76,6 +76,10 @@
     margin-left: 75px;
   }
 
+  .site-title {
+    padding-bottom: 15px;
+  }
+
   body {
     /*font-family: Calibria, serif;*/
     background-color: #0B543E;
