--- a/views/index.html
+++ b/views/index.html
@@ -185,7 +185,7 @@
     </section>
 
 <p><a href="/create">Create</a></p>
-<p><a href="">Edit</a></p>
+<p><a href="/edit">Edit</a></p>
 
     <!-- End Form Sample -->
 
