--- a/views/index.html
+++ b/views/index.html
@@ -71,7 +71,7 @@
               <input type="submit" class="btn btn-block btn-primary" value="Log In">
             </div>
           </div>
-        </div>  
+        </div>
       </form>
 
     <!-- Begin Form Sample -->
@@ -189,14 +189,21 @@
 
     <!-- End Form Sample -->
 
-     <section class="container">
-      <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-          <h2>Map</h2>
-          <div id="mapPlacement"></div>
-        </div>
+    <!-- map section -->
+    <section class="map-section">
+      <div class="find-hero-button xs-col-3">
+        <button type="button" class="btn btn-primary" id="map-button">Find Hero</button>
       </div>
-     </section>
+      <article class="container">
+        <div class="row">
+          <div class="col-md-6 col-md-offset-3">
+            <h2>Map</h2>
+            <div id="mapPlacement"></div>
+          </div>
+        </div>
+      </article>
+    </section>
+
 
     <section class="container">
       <div class="row">
