switch pages in ajax call

--- a/views/edit.html
+++ b/views/edit.html
@@ -71,7 +71,7 @@
             </div>
           </section>
 <!-- ****** end of gif section ******  -->
-        <form class="form-horizontal new-review">
+        <form class="form-horizontal edit-review">
           <fieldset>
 
             <!-- Form Name -->
