html for hide and reveal map

--- a/views/index.html
+++ b/views/index.html
@@ -189,14 +189,22 @@
 
     <!-- End Form Sample -->
 
-     <section class="container">
-      <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-          <h2>Map</h2>
-          <div id="mapPlacement"></div>
-        </div>
-      </div>
-     </section>
+    <!-- map section -->
+   <section class="map-section">
+     <div class="find-hero-button">
+       <button type="button" class="btn btn-primary" id="map-button">Find Hero</button>
+     </div>
+     <article class="container">
+       <div class="row">
+         <div class="col-md-6 col-md-offset-3" id="hero-map">
+           <div id="mapPlacement"></div>
+           <div class="hide-map-area">
+             <button type="button" class="btn btn-primary" id="hide-map-button">Hide Map</button>
+           </div>
+         </div>
+       </div>
+     </article>
+   </section>
 
     <section class="container">
       <div class="row">
