--- a/views/index.html
+++ b/views/index.html
@@ -191,14 +191,19 @@
 
     <!-- map section -->
     <section class="map-section">
-      <div class="find-hero-button xs-col-3">
+      <div class="find-hero-button">
         <button type="button" class="btn btn-primary" id="map-button">Find Hero</button>
       </div>
       <article class="container">
         <div class="row">
-          <div class="col-md-6 col-md-offset-3">
-            <h2>Map</h2>
+          <div class="col-md-6 col-md-offset-3" id="hero-map">
             <div id="mapPlacement"></div>
+            <div class="current-location">
+              <button type="button" class="btn btn-primary btn-block" id="current-location">Use My Current Location</button>
+            </div>
+            <div class="hide-map-area">
+              <button type="button" class="btn btn-primary" id="hide-map-button">Hide Map</button>
+            </div>
           </div>
         </div>
       </article>
